# lbann

./: .clang-format  CMakeLists.txt  LICENSE  README.md  pyproject.toml
cmake/: LBANNv2DetectTorchNVIDIALibraries.cmake  LBANNv2DetermineMI300A.cmake  lbannv2Config.cmake.in  lbannv2_config.h.in
include/lbann/utils/impl/: rocm.hpp
python/lbannv2/: __init__.py  _automigrate.py
src/lbannv2/: CMakeLists.txt  types.hpp
src/lbannv2/backend/: CMakeLists.txt  device_guard.hpp  fallback.cpp  fallback.hpp  hooks_interface.cpp  hooks_interface.hpp  library_state.cpp  library_state.hpp
src/lbannv2/memory/: CMakeLists.txt  allocator.cpp  allocator.hpp  h2_allocator_wrappers.cpp  h2_allocator_wrappers.hpp  memory_utils.hpp  mi300a_allocator.cpp  mi300a_allocator.hpp  registry.cpp  registry.hpp  toplevel_allocator.cpp  toplevel_allocator.hpp
src/lbannv2/ops/: CMakeLists.txt  copy.cpp  copy.hpp  empty_tensor.cpp  empty_tensor.hpp  migrate.cpp  migrate.hpp  nonzero.hip  nonzero.hpp  scalar.cpp  scalar.hpp
src/lbannv2/python/: CMakeLists.txt  register_lbannv2.cpp  register_memory_funcs.cpp  register_mi300a_ops.cpp  register_ops.cpp  register_torch_support.cpp
src/lbannv2/utils/: CMakeLists.txt  debugging_helpers.hpp  device_helpers.cpp  device_helpers.hpp  errors.hpp  gpu_utils.cpp  gpu_utils.hpp  logging.cpp  logging.hpp  tensor_helpers.hpp
test/: CMakeLists.txt
test/cpp/: test_device_helpers.cpp  test_empty_tensor.cpp  test_helpers.hpp  test_mi300a_allocator.cpp  test_pointer_registry.cpp  test_tensor_helpers.cpp
